@@ -409,7 +409,7 @@ public class DiskOnlyStrategy extends AbstractBufferStrategy implements
             buf.put(data);
 
             // add the record to the write cache index for read(addr).
-            writeCacheIndex.put(new Long(addr), new Integer(position));
+            writeCacheIndex.put(Long.valueOf(addr), Integer.valueOf(position));
 
         }
 
